2016-10-25  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Add DW_TAG_coarray_type, DW_TAG_generic_subrange,
	DW_TAG_dynamic_type, DW_TAG_call_site, DW_TAG_call_site_parameter,
	DW_TAG_skeleton_unit, DW_TAG_immutable_type.

2016-10-27  Mark Wielaard  <mjw@redhat.com>

	* dwarf_default_lower_bound.c: New file.
	* Makefile.am (libdw_a_SOURCES): Add dwarf_default_lower_bound.c.
	* dwarf_aggregate_size.c (array_size): Use dwarf_default_lower_bound.
	* dwarf_error.c (errmsgs): Add DWARF_E_UNKNOWN_LANGUAGE.
	* libdw.h: Add dwarf_default_lower_bound.
	* libdw.map (ELFUTILS_0.168): New section.
	* libdwP.h: Add DWARF_E_UNKNOWN_LANGUAGE and
	dwarf_default_lower_bound INTDECL.

2016-10-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Add DW_LANG_OpenCL, DW_LANG_Modula3,
	DW_LANG_C_plus_plus_03, DW_LANG_OCaml, DW_LANG_Rust, DW_LANG_Swift,
	DW_LANG_Julia, DW_LANG_Dylan and DW_LANG_RenderScript.
	* dwarf_aggregate_size.c (array_size): Add lower bound for
	DW_LANG_C_plus_plus_03, DW_LANG_Python, DW_LANG_OpenCL,
	DW_LANG_Haskell, DW_LANG_OCaml, DW_LANG_Rust, DW_LANG_Swift,
	DW_LANG_Dylan, DW_LANG_RenderScript, DW_LANG_Modula3 and
	DW_LANG_Julia.

2016-10-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Add DW_CC_pass_by_reference and DW_CC_pass_by_reference.

2016-10-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Correct spelling of DW_LANG_PLI. Add compatibility define.
	* dwarf_aggregate_size.c (array_size): Use correct spelling of
	DW_LANG_PLI.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* dwarf_getpubnames.c: Remove sys/param.h include, add system.h.
	* libdw_alloc.c: Likewise.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* libdw.map (ELFUTILS_0.167): New. Add dwelf_strtab_init,
	dwelf_strtab_add, dwelf_strtab_add_len, dwelf_strtab_finalize,
	dwelf_strent_off, dwelf_strent_str and dwelf_strtab_free.

2016-02-13  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Calculate ndirs first, then
	assign to ndirlist.
